upd since long time ago

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.dataScience.jupyterServerURI": "local"
+    "python.dataScience.jupyterServerURI": "local",
+    "python.pythonPath": "C:\\Users\\floki\\anaconda3\\envs\\ai\\python.exe"
 }
